# lab_2-3

./: CMakeLists.txt  main.cpp
Arrays/: MutDynamicArray.h  MutDynamicArray_impl.h  array_sequence.h  array_sequence_impl.h  array_set.h  array_set_impl.h
Checker/: IndexOutOfRange.cpp  IndexOutOfRange.h  errors.h
Tests/: tests_array_sequence.h  tests_array_set.h  tests_dynamic_array.h  tests_linked_list.h  tests_list_sequence.h
classes/: Chars.cpp  Chars.h  ComplexNumber.cpp  ComplexNumber.h  Students.cpp  Students.h  Teachers.cpp  Teachers.h
dynamic_array/: dynamic_array.cpp  dynamic_array.h
linked_list/: linked_list.h  linked_list_impl.h
list_sequence/: list_sequence.h  list_sequence_impl.h
sequence/: sequence.h
